...
                android:layout_weight="1"
                android:text="Title:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdTitleID"
                android:layout_width="393dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="Company:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdCompanyID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="City:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdCityID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="State:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdStateID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="Cost of Living:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdCostOfLivingID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Commute Time:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdCommuteTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Yearly Salary:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdYearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Yearly Bonus:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdYearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Retirement Benefits:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdRetirementBenefitsID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Leave Time:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/jdLeaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jdSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveCurrentJob"
                android:text="SAVE"
                android:textColor="#0E0E0E" />

            <Button
                android:id="@+id/cancelCurrentJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelCurrentJob"
                android:text="CANCEL"
                android:textColor="#0B0A0A" />
...
