...
                android:layout_weight="1"
                android:text="Title:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joTitleID"
                android:layout_width="393dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="Company:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCompanyID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="City:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCityID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="State:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joStateID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
...
                android:layout_weight="1"
                android:text="Cost of Living:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCostOfLivingID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Commute Time:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCommuteTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Yearly Salary:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joYearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Yearly Bonus:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joYearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Retirement Benefits:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joRetirementBenefitsID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
                android:layout_weight="1"
                android:text="Leave Time:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joLeaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

...
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/joSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveJobOffer"
                android:text="SAVE"
                android:textColor="#0E0E0E" />
...
