...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Commute"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_commute_time_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Salary"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_yearly_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Bonus"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_yearly_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Retirement Benefits"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_retirement_benefits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Leave Time"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comparison_settings_leave_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
...
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveComparisonSettings"
                android:text="Save" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelComparisonSettings"
                android:text="Cancel" />
        </LinearLayout>
...
