...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/CompareJobs"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:onClick="handleCompareOffers"
        android:text="Compare Jobs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ComparisonSettings" />

    <Button
        android:id="@+id/EnterJobDetails"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:onClick="handleCurrentJob"
        android:text="Enter Current Job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19" />

    <Button
        android:id="@+id/EnterJobOffer"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:onClick="handleJobOffer"
        android:text="Enter Job Offer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
